--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-CLI621
+CLI621 v 0.1.1
 
 CLI621 is an e621.net downloader for the command line interface. It accepts
 tasks and downloads requested content from e621.net. It is still in development
@@ -12,4 +12,10 @@ Install
   Just copy .e621/ into your home directory and put your user name and password
   into passwd.json. There is no anonymous login possible at this moment.
 
-If you find any bugs, please mail them to maxine_red1@yahoo.com. Thank you!
+Versioning
+  CLI621 follows the common MAJOR.MINOR.PATCH pattern, where PATCHes don't add
+  new features, MINOR updates add new features and are backwards compatible and
+  MAJOR updates add new features, but are not backwards compatible.
+
+If you find any bugs or have some suggestions, please mail them to
+maxine_red1@yahoo.com. Thank you!
