Revert "Merge branch 'v0.2.1'"
This reverts commit d14557f0645947fd4fec44955ad2ba2dac7096c4, reversing
changes made to 1e787bedcbddac0df6e60d952bfb5c466b151c1b.

--- a/README
+++ b/README
@@ -17,6 +17,11 @@ Versioning
   new features, MINOR updates add new features and are backwards compatible and
   MAJOR updates add new features, but are not backwards compatible.
 
+Known issues
+  There is a bug when you're using dash as your fallback shell 'sh', issue found
+  on Debian only currently. Please change 'sh' to point to bash, or passwor
+  input will not work.
+
 Branches
   Master always contains stable releases. Where stable means that the author did
   not find any major bugs in her testing.
